colud studio update2 2019/06/07

--- a/income/piggy_bank/templates/home.html
+++ b/income/piggy_bank/templates/home.html
@@ -23,13 +23,23 @@
 </nav>
 
 <div class="row" style="padding-top: 70px;">
-    <div class="col-md-11" align="left">
-        <ul>
+    <div class="col-md-11" align="center">
+        <ul style="list-style-type:none">
             <li>欢迎您，<a href="#">{{user}}</a></li>
             <li><a href="/account">记一笔账</a></li>
             <li><a href="/income_manage">家庭收入展示</a></li>
             <li><a href="/debts_manage">家庭债务展示</a></li>
         </ul>
+    </div>
+    <div class="col-md-11" align="center">
+        <table>
+            <tr>
+                <td style="height:100%;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                <td style="width:100%;">
+                    <object style="border:0px" type="text/x-scriptlet" data="word_cloud" width=100% height=1000></object>
+                </td>
+            </tr>
+        </table>
     </div>
 </div>
 </body>
