--- a/income/piggy_bank/templates/home.html
+++ b/income/piggy_bank/templates/home.html
@@ -30,11 +30,11 @@ margin: 0 10px 5px 0; /*margin between images*/
 
 .hovergallery img:hover{
 
--webkit-transform:scale(5); /*Webkit: Scale up image to 1.2x original size*/
+-webkit-transform:scale(4); /*Webkit: Scale up image to 1.2x original size*/
 
--moz-transform:scale(5); /*Mozilla scale version*/
+-moz-transform:scale(4); /*Mozilla scale version*/
 
--o-transform:scale(5); /*Opera scale version*/
+-o-transform:scale(4); /*Opera scale version*/
 
 box-shadow:0px 0px 30px gray; /*CSS3 shadow: 30px blurred shadow all around image*/
 
@@ -75,7 +75,7 @@ opacity: 1;
             <li><a href="/account">记一笔账</a></li>
             <li><a href="/income_manage">家庭收入展示</a></li>
             <li><a href="/debts_manage">家庭债务展示</a></li>
-            <li><a>&nbsp;&nbsp;</a><img src="/static/qrcode1.png"/></li>
+            <li><a>&nbsp;&nbsp;</a><img src="/static/qrcode.svg"/></li>
         </ul>
     </div>
     <div class="col-md-11" align="center">
