--- a/income/piggy_bank/templates/home.html
+++ b/income/piggy_bank/templates/home.html
@@ -79,11 +79,11 @@ opacity: 1;
         </ul>
     </div>
     <div class="col-md-11" align="center">
-        <table>
+        <table style="width:850px;margin:0 auto">
             <tr>
-                <td style="height:100%;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
                 <td style="width:100%;">
-                    <object style="border:0px" type="text/x-scriptlet" data="/static/word_cloud.html" width=100% height=1000></object>
+                    <object style="border:0px" type="text/html" data="/static/word_cloud.html" width=100% height=1000></object>
+                    <!--type="text/html",兼容ie和safari-->
                 </td>
             </tr>
         </table>
