--- a/income/piggy_bank/templates/income_plot.html
+++ b/income/piggy_bank/templates/income_plot.html
@@ -31,7 +31,8 @@
 </nav>
 <div class="row" style="padding-top: 70px;">
     <div class="col-md-11">
-        <object style="border:0px" type="text/x-scriptlet" data="/static/plot.html" width=100% height=1000></object>
+        <object style="border:0px" type="text/html" data="/static/plot.html" width=100% height=1000></object>
+        <!--type="text/html",兼容ie和safari-->
     </div>
 </div>
 </body>
