update frond end coding.

--- a/income/piggy_bank/templates/home.html
+++ b/income/piggy_bank/templates/home.html
@@ -1,93 +1,154 @@
 <!DOCTYPE html>
-<html lang="zn-CN">
-<head>
-    {% load bootstrap4 %}
-    {% bootstrap_css %}
-    {% bootstrap_javascript %}
-    <meta charset="UTF-8">
+<!-- saved from url=(0055)http://www.coolsite360.com/sites/wafkzg_draft/home.html -->
+<html class=" portrait"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>家庭收入管理平台</title>
-    <style type="text/css">
+    
+    <meta content="" name="keywords">
+    <meta content="" name="description">
+    
+    
+    <meta name="apple-touch-fullscreen" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="renderer" content="webkit">
+    <script src="/static/home/youziku.client.min.js.下载"></script><script>
+    </script>
+ 
+    <script type="text/javascript" src="/static/home/object-assign.min.js.下载"></script>
+    <script type="text/javascript" src="/static/home/promise.js.下载"></script>
+    <script>
+        // Polyfill, modifying the global Object
+        window.ObjectAssign.polyfill();
+    </script>
+    
+        <link rel="stylesheet" type="text/css" href="/static/home/jquery.fancybox.min.css">
+    
+        <link rel="stylesheet" type="text/css" href="/static/home/font-awesome.min.css">
+    
+        <link rel="stylesheet" type="text/css" href="/static/home/animate.css">
+    
 
-.hovergallery img{
+    
+    
+        <link type="text/css" href="/static/home/coolsite.built.48972d26.cache.css" rel="stylesheet" media="all">
+    
+    
+    
+     <script type="text/javascript" src="/static/home/jquery.min.js(1).下载"></script>
+    <script type="text/javascript" src="/static/home/bootstrap.min.js(1).下载"></script>
+    
 
--webkit-transform:scale(0.8); /*Webkit: Scale down image to 0.8x original size*/
+    
 
--moz-transform:scale(0.8); /*Mozilla scale version*/
 
--o-transform:scale(0.8); /*Opera scale version*/
 
--webkit-transition-duration: 0.5s; /*Webkit: Animation duration*/
 
--moz-transition-duration: 0.5s; /*Mozilla duration version*/
+    
+    
 
--o-transition-duration: 0.5s; /*Opera duration version*/
+    
+        <link type="text/css" href="/static/home/global_main.css" rel="stylesheet">
+        
+        <script type="text/javascript">
+          if(navigator.appVersion.match(/MSIE [678]./i)==null){
+            document.writeln('<link type="text/css" href="/static/home/styles.css" rel="stylesheet">')
+          }
+        </script><link type="text/css" href="/static/home/styles.css" rel="stylesheet">
 
-opacity: 0.7; /*initial opacity of images*/
+    
 
-margin: 0 10px 5px 0; /*margin between images*/
 
-}
 
-.hovergallery img:hover{
 
--webkit-transform:scale(4); /*Webkit: Scale up image to 1.2x original size*/
-
--moz-transform:scale(4); /*Mozilla scale version*/
-
--o-transform:scale(4); /*Opera scale version*/
-
-box-shadow:0px 0px 30px gray; /*CSS3 shadow: 30px blurred shadow all around image*/
-
--webkit-box-shadow:0px 0px 30px gray; /*Safari shadow version*/
-
--moz-box-shadow:0px 0px 30px gray; /*Mozilla shadow version*/
-
-opacity: 1;
-
-}
-
-</style>
 </head>
-<body role="document">
-<!--导航栏-->
-<nav class="navbar navbar-expend-sm bg-dark navbar-dark fixed-top">
-    <div class="container">
-        <ul class="nav justify-content">
-            <li class="nav-link">
-                <img src="/static/money.svg"/>
-            </li>
-        </ul>
-        <ul class="nav justify-content">
-            <li class="nav-link">
-                <a style="color:white" href="#">{{ user }}</a>
-            </li>
-            <li class="nav-link">
-                <a style="color:white" href="/logout/">退出</a>
-            </li>
-        </ul>
-    </div>
-</nav>
 
-<div class="row" style="padding-top: 70px;">
-    <div class="col-md-11 hovergallery" align="center">
-        <ul style="list-style-type:none">
-            <li>欢迎您，<a href="#">{{user}}</a></li>
-            <li><a href="/account">记一笔账</a></li>
-            <li><a href="/income_manage">家庭收入展示</a></li>
-            <li><a href="/debts_manage">家庭债务展示</a></li>
-            <li><a>&nbsp;&nbsp;</a><img src="/static/qrcode.svg"/></li>
-        </ul>
-    </div>
-    <div class="col-md-11" align="center">
-        <table style="width:850px;margin:0 auto">
-            <tr>
-                <td style="width:100%;">
-                    <object style="border:0px" type="text/html" data="/static/word_cloud.html" width=100% height=1000></object>
-                    <!--type="text/html",兼容ie和safari-->
-                </td>
-            </tr>
-        </table>
-    </div>
+<body class="S_cbVQbOM7"><div class="container-fluid cst_navcontainer c-section S_cbsect_ecf3c873 c-scrollIn" data-c_spy="scroll" data-c_tl_id="tl_f83f28f0" id="section73ef9f42"><nav class="navbar nav_style_01 c-navbar S_cbnavb_50c80eaa"><div class="container cst_navcontainer S_cbnavc_8d0128d4"><div class="navbar-header c-navheader S_cbnavh_ddc88e39"><button class="navbar-toggle c-navmenubutton S_cbnavm_527046e3" data-target="#navmenu_96cee94d43736d9a" data-toggle="collapse" switch-class="c-state1" switch-selector=".navbar-collapse" type="button"><span class="sr-only c-span S_cbspan_67e2c8ac">Toggle navigation</span><span class="icon-bar c-nav-btn-span S_cbspan_7c837723"></span><span class="icon-bar c-nav-btn-span S_cbspan_89a68aa6"></span></button><a class="navbar-toggle-desktop hidden-xs c-linkblock S_cblink_08279578 c-action-click" data-c_act_id="act_eb360d5c"><i class="fa fa-bars c-icon S_cbicon_06966a55" data-c_e_id="icon1fac4612" switch-class="c-state1" switch-selector=".navbar-collapse"></i><i class="fa fa-remove c-icon S_cbicon_71c11cdd" data-c_e_id="iconaf5904a3"></i></a><a class="navbar-brand hidden-lg hidden-md hidden-sm hidden-xs c-navbrand S_cbnavb_0bbae815"></a></div><div class="collapse navbar-collapse c-navcollapse S_cbnavc_a110e26c" data-c_e_id="navcollapseb9aaba37" id="navmenu_96cee94d43736d9a"><ul class="nav navbar-nav navbar-right c-navlist S_cbnavl_db68fbf3"><li class="dropdown c-dropdown S_cbnavd_5319231b"><a class="dropdown-toggle S_cbnavl_7c261a9c" data-toggle="dropdown" type="button"><span class="S_cbtext_b4b748ce">记账</span><span class="caret c-span S_cbspan_c7736a9e"></span></a><ul class="dropdown-menu c-dropdown-menu S_cbdrop_9fe45332" role="menu"><li class="c-dropdown-listitem S_cbdrop_f42a4f5b" role="presentation"><a class="c-dropdown-textlink S_cbdrop_be6fc26f" href="/income/" role="menuitem" tabindex="-1">收支</a></li><li class="c-dropdown-listitem S_cbdrop_32d1b23f" role="presentation"><a class="c-dropdown-textlink S_cbdrop_be6fc26f" href="/debts/" role="menuitem" tabindex="-1">债务</a></li></ul></li><li class="c-navlistitem S_cbnavl_f4e737e3"><a class="c-navlink S_cbnavl_7c261a9c" data-c_spy="scroll" href="/income_manage/">收入展示</a></li><li class="c-navlistitem S_cbnavl_f4e737e3"><a class="c-navlink S_cbnavl_7c261a9c" data-c_spy="scroll" href="/debts_manage">债务展示</a></li><li class="c-navlistitem S_cbnavl_f4e737e3"><a class="c-navlink S_cbnavl_7c261a9c" data-c_spy="scroll" href="/logout/">退出</a></li></ul></div></div></nav></div><div class="container-fluid cst_sectionBlock c-section S_cbsect_2cbaadb8 c-scrollIn" data-c_tl_id="tl_701c4dbc" id="section33064612"><div class="container cst_container_base c-container-1 S_cbcont_e6665a23"><div class="c-div S_cbdiv_47640d08"><hr class="cst_leftspliteline S_cb_oth_f7cbf4f0"><div class="cst_textWrap cst_textSetting c-div S_cbdiv_18f29252"><h3 class="cst_title c-heading youziku-e094346a5670469eaacd0dcc3afa6f0d S_cbhead_95b057a9" accesskey="e094346a5670469eaacd0dcc3afa6f0d" style="font-family: Source-Han-Light;">温馨的家</h3><h5 class="cst_subtitle c-heading S_cbhead_c291f9db">你不理财不理你</h5></div><hr class="cst_rightspliteline S_cb_oth_8e984756"></div><div class="cst_mLR-15 cst_hoverLink_effect01 cst_cardlist_Waterfall cst_hovershadow_Griditem c-div S_cbdiv_297e88b4" data-c_cssani="fadeIn|1|0|0" style="animation-delay: 0s; animation-duration: 0s;"><div class="cst_grid cst_gridSpace c-grid masonry S_cbgrid_1b1e0594"><div class="row cst_textSetting c-row S_cbrow_c1b9a0b6" style="position: relative; height: 2077.96px;"><div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 c-column c-inline-column S_cbcolu_b6c9e735" style="position: absolute; left: 0px; top: 0px;"><div class="cst_block_item c-div S_cbdiv_2fe7a857"><div class="cst_hoverLinkWrap cst_divimageWrap c-div S_cbdiv_82bef9ae"><div class="cst_hoverLink_overlay c-div S_cbdiv_cd7e04ac"><div class="cst_hoverLink_linkblock c-div S_cbdiv_9e973896"><h4 class="cst_hoverLink_title c-heading S_cbhead_be99a24d"></h4><p class="cst_hoverLink_description S_cbpara_ffbf3391"></p></div><a class="cst_hoverLink_lightboxLink cf-invisible  c-linkblock S_cblink_3ef72f9c" data-fancybox="gallery02" data-lightbox="gallery01" href="/static/home/e52492d2a272ff19b3821c1db3a52303_origin.jpg"></a></div><img class="cst_divimage c-image S_cbimag_2dafd2e5" src="/static/home/e52492d2a272ff19b3821c1db3a52303_origin.jpg"></div></div></div><div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 c-column c-inline-column S_cbcolu_b6c9e735" style="position: absolute; left: 383px; top: 0px;"><div class="cst_block_item c-div S_cbdiv_2fe7a857"><div class="cst_hoverLinkWrap cst_divimageWrap c-div S_cbdiv_82bef9ae"><div class="cst_hoverLink_overlay c-div S_cbdiv_cd7e04ac"><div class="cst_hoverLink_linkblock c-div S_cbdiv_9e973896"><h4 class="cst_hoverLink_title c-heading S_cbhead_be99a24d"></h4><p class="cst_hoverLink_description S_cbpara_ffbf3391"></p></div><a class="cst_hoverLink_lightboxLink cf-invisible  c-linkblock S_cblink_3ef72f9c" data-fancybox="gallery02" data-lightbox="gallery01" href="/static/home/e2adde92a305bbfe03d84b53a1c21227_origin.jpg"></a></div><img class="cst_divimage c-image S_cbimag_2dafd2e5" src="/static/home/e2adde92a305bbfe03d84b53a1c21227_origin.jpg"></div></div></div><div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 c-column c-inline-column S_cbcolu_b6c9e735" style="position: absolute; left: 766px; top: 0px;"><div class="cst_block_item c-div S_cbdiv_2fe7a857"><div class="cst_hoverLinkWrap cst_divimageWrap c-div S_cbdiv_82bef9ae"><div class="cst_hoverLink_overlay c-div S_cbdiv_cd7e04ac"><div class="cst_hoverLink_linkblock c-div S_cbdiv_9e973896"><h4 class="cst_hoverLink_title c-heading S_cbhead_be99a24d"></h4><p class="cst_hoverLink_description S_cbpara_ffbf3391"></p></div><a class="cst_hoverLink_lightboxLink cf-invisible  c-linkblock S_cblink_3ef72f9c" data-fancybox="gallery02" data-lightbox="gallery01" href="/static/home/e0faf48e4a741bc681a5fab7a6b7fc64_origin.jpg"></a></div><img class="cst_divimage c-image S_cbimag_2dafd2e5" src="/static/home/e0faf48e4a741bc681a5fab7a6b7fc64_origin.jpg"></div></div></div><div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 c-column c-inline-column S_cbcolu_b6c9e735" style="position: absolute; left: 0px; top: 383px;"><div class="cst_block_item c-div S_cbdiv_2fe7a857"><div class="cst_hoverLinkWrap cst_divimageWrap c-div S_cbdiv_82bef9ae"><div class="cst_hoverLink_overlay c-div S_cbdiv_cd7e04ac"><div class="cst_hoverLink_linkblock c-div S_cbdiv_9e973896"><h4 class="cst_hoverLink_title c-heading S_cbhead_be99a24d"></h4><p class="cst_hoverLink_description S_cbpara_ffbf3391"></p></div><a class="cst_hoverLink_lightboxLink cf-invisible  c-linkblock S_cblink_3ef72f9c" data-fancybox="gallery02" data-lightbox="gallery01" href="/static/home/cfde0631623573f00763eda855099335_origin.jpg"></a></div><img class="cst_divimage c-image S_cbimag_2dafd2e5" src="/static/home/cfde0631623573f00763eda855099335_origin.jpg"></div></div></div><div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 c-column c-inline-column S_cbcolu_b6c9e735" style="position: absolute; left: 383px; top: 740px;"><div class="cst_block_item c-div S_cbdiv_2fe7a857"><div class="cst_hoverLinkWrap cst_divimageWrap c-div S_cbdiv_82bef9ae"><div class="cst_hoverLink_overlay c-div S_cbdiv_cd7e04ac"><div class="cst_hoverLink_linkblock c-div S_cbdiv_9e973896"><h4 class="cst_hoverLink_title c-heading S_cbhead_be99a24d"></h4><p class="cst_hoverLink_description S_cbpara_ffbf3391"></p></div><a class="cst_hoverLink_lightboxLink cf-invisible  c-linkblock S_cblink_3ef72f9c" data-fancybox="gallery02" data-lightbox="gallery01" href="/static/home/b864c690401fa2039a296b2b95723794_origin.jpg"></a></div><img class="cst_divimage c-image S_cbimag_2dafd2e5" src="/static/home/b864c690401fa2039a296b2b95723794_origin.jpg"></div></div></div><div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 c-column c-inline-column S_cbcolu_b6c9e735" style="position: absolute; left: 766px; top: 806px;"><div class="cst_block_item c-div S_cbdiv_2fe7a857"><div class="cst_hoverLinkWrap cst_divimageWrap c-div S_cbdiv_82bef9ae"><div class="cst_hoverLink_overlay c-div S_cbdiv_cd7e04ac"><div class="cst_hoverLink_linkblock c-div S_cbdiv_9e973896"><h4 class="cst_hoverLink_title c-heading S_cbhead_be99a24d"></h4><p class="cst_hoverLink_description S_cbpara_ffbf3391"></p></div><a class="cst_hoverLink_lightboxLink cf-invisible  c-linkblock S_cblink_3ef72f9c" data-fancybox="gallery02" data-lightbox="gallery01" href="/static/home/86fa7bdce2f144e88e34d1029e36a2ee_origin.jpg"></a></div><img class="cst_divimage c-image S_cbimag_2dafd2e5" src="/static/home/86fa7bdce2f144e88e34d1029e36a2ee_origin.jpg"></div></div></div><div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 c-column c-inline-column S_cbcolu_b6c9e735" style="position: absolute; left: 383px; top: 1123px;"><div class="cst_block_item c-div S_cbdiv_2fe7a857"><div class="cst_hoverLinkWrap cst_divimageWrap c-div S_cbdiv_82bef9ae"><div class="cst_hoverLink_overlay c-div S_cbdiv_cd7e04ac"><div class="cst_hoverLink_linkblock c-div S_cbdiv_9e973896"><h4 class="cst_hoverLink_title c-heading S_cbhead_be99a24d"></h4><p class="cst_hoverLink_description S_cbpara_ffbf3391"></p></div><a class="cst_hoverLink_lightboxLink cf-invisible  c-linkblock S_cblink_3ef72f9c" data-fancybox="gallery02" data-lightbox="gallery01" href="/static/home/3f3770a65dcd3c75dcb9768969d06090_origin.jpg"></a></div><img class="cst_divimage c-image S_cbimag_2dafd2e5" src="/static/home/3f3770a65dcd3c75dcb9768969d06090_origin.jpg"></div></div></div><div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 c-column c-inline-column S_cbcolu_b6c9e735" style="position: absolute; left: 0px; top: 1190px;"><div class="cst_block_item c-div S_cbdiv_2fe7a857"><div class="cst_hoverLinkWrap cst_divimageWrap c-div S_cbdiv_82bef9ae"><div class="cst_hoverLink_overlay c-div S_cbdiv_cd7e04ac"><div class="cst_hoverLink_linkblock c-div S_cbdiv_9e973896"><h4 class="cst_hoverLink_title c-heading S_cbhead_be99a24d"></h4><p class="cst_hoverLink_description S_cbpara_ffbf3391"></p></div><a class="cst_hoverLink_lightboxLink cf-invisible  c-linkblock S_cblink_3ef72f9c" data-fancybox="gallery02" data-lightbox="gallery01" href="/static/home/139ee62a3a9888d146810a89d26519fa_origin.jpg"></a></div><img class="cst_divimage c-image S_cbimag_2dafd2e5" src="/static/home/139ee62a3a9888d146810a89d26519fa_origin.jpg"></div></div></div><div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 c-column c-inline-column S_cbcolu_b6c9e735" style="position: absolute; left: 766px; top: 1613px;"><div class="cst_block_item c-div S_cbdiv_2fe7a857"><div class="cst_hoverLinkWrap cst_divimageWrap c-div S_cbdiv_82bef9ae"><div class="cst_hoverLink_overlay c-div S_cbdiv_cd7e04ac"><div class="cst_hoverLink_linkblock c-div S_cbdiv_9e973896"><h4 class="cst_hoverLink_title c-heading S_cbhead_be99a24d"></h4><p class="cst_hoverLink_description S_cbpara_ffbf3391"></p></div><a class="cst_hoverLink_lightboxLink cf-invisible  c-linkblock S_cblink_3ef72f9c" data-fancybox="gallery02" data-lightbox="gallery01" href="/static/home/e52492d2a272ff19b3821c1db3a52303_origin.jpg"></a></div><img class="cst_divimage c-image S_cbimag_2dafd2e5" src="/static/home/e52492d2a272ff19b3821c1db3a52303_origin.jpg"></div></div></div><div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 c-column c-inline-column S_cbcolu_b6c9e735" style="position: absolute; left: 0px; top: 1694px;"><div class="cst_block_item c-div S_cbdiv_2fe7a857"><div class="cst_hoverLinkWrap cst_divimageWrap c-div S_cbdiv_82bef9ae"><div class="cst_hoverLink_overlay c-div S_cbdiv_cd7e04ac"><div class="cst_hoverLink_linkblock c-div S_cbdiv_9e973896"><h4 class="cst_hoverLink_title c-heading S_cbhead_be99a24d"></h4><p class="cst_hoverLink_description S_cbpara_ffbf3391"></p></div><a class="cst_hoverLink_lightboxLink cf-invisible  c-linkblock S_cblink_3ef72f9c" data-fancybox="gallery02" data-lightbox="gallery01" href="/static/home/b864c690401fa2039a296b2b95723794_origin.jpg"></a></div><img class="cst_divimage c-image S_cbimag_2dafd2e5" src="/static/home/b864c690401fa2039a296b2b95723794_origin.jpg"></div></div></div></div></div></div></div></div>
+
+
+
+<script src="/static/home/youziku.justtime.js.下载"></script>
+<script type="text/javascript" src="/static/home/stats" charset="UTF-8"></script>
+
+                <script type="text/javascript" src="/static/home/home_data.js.下载"></script>
+                <script>var page_slug = 'home'; </script>
+            
+
+  <script src="/static/home/jweixin-1.1.0.js.下载"></script>
+
+
+
+
+
+    <script type="text/javascript" src="/static/home/lunr.min.js.下载"></script>
+
+    <script type="text/javascript" src="/static/home/jquery.fancybox.min.js.下载"></script>
+
+    <script type="text/javascript" src="/static/home/headroom.min.js(1).下载"></script>
+
+    <script type="text/javascript" src="/static/home/jQuery.headroom.min.js(1).下载"></script>
+
+    <script type="text/javascript" src="/static/home/jarallax.min.js(1).下载"></script>
+
+    <script type="text/javascript" src="/static/home/TweenMax.min.js(1).下载"></script>
+
+    <script type="text/javascript" src="/static/home/DrawSVGPlugin.min.js(1).下载"></script>
+
+    <script type="text/javascript" src="/static/home/MorphSVGPlugin.min.js(1).下载"></script>
+
+    <script type="text/javascript" src="/static/home/vue-bundle.min.js(1).下载"></script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <script type="text/javascript" src="/static/home/coolsite.built.93b25a39.cache.js.下载"></script>
+
+
+
+
+<!-- ie9 及以下版本提示信息 lte小于或等于-->
+<!--[if lte ie 9]>
+  <script type="text/javascript">
+    window.onload=function(){
+      document.getElementById('browser-tip').style.display = "block";
+      document.getElementsByTagName('body')[0].style.paddingTop = "50px";
+    }
+    function hide(){
+      document.getElementById('browser-tip').style.display = "none";
+      document.getElementsByTagName('body')[0].style.paddingTop = "0px";
+    }
+  </script>
+<![endif]-->
+
+<div id="browser-tip" style="position:fixed;top:0;left:0;right:0;z-index:9999;height:30px;line-height:33px;padding: 10px 0 39px;text-indent:30px;font-size:15px;background:#fcf8e3;border-bottom:1px solid #fbeed5;width:100%; display:none;">
+  <button type="button" class="close" data-dismiss="modal" aria-hidden="true" style="display:block;float:right;z-index:9999;line-height: 30px;padding:0;font-size:32px;color: #000000;text-shadow:none;opacity:1;margin-right: 10px;" onclick="hide()">×</button>
+  <p style="text-align: center;letter-spacing: 0px;">
+    浏览器版本较低，为获得更好的操作体验，建议使用谷歌浏览器打开.
+    <a href="https://www.baidu.com/s?ie=UTF-8&amp;wd=%E8%B0%B7%E6%AD%8C%E6%B5%8F%E8%A7%88%E5%99%A8" style="margin-left:10px;font-size: 15px;" target="_blank">
+        点击下载谷歌浏览器</a>
+  </p>
 </div>
-</body>
-</html>
+
+
+
+
+<!-- 统计代码-->
+
+    <script type="text/javascript" src="/static/home/stats" charset="UTF-8"></script>
+
+
+
+</body></html>
