--- a/income/piggy_bank/templates/income_manage.html
+++ b/income/piggy_bank/templates/income_manage.html
@@ -9,7 +9,7 @@
 </head>
 <body role="document">
 <!--导航栏-->
-<nav class="navbar navbar-expend-sm bg-dark navbar-dark fixed-top">
+<nav class="navbar navbar-expend-sm bg-dark navbar-dark fixed-top navbar nav_style_01 c-navbar S_cbnavb_50c80eaa">
     <div class="container">
         <ul class="nav justify-content-center">
         <form method="post", action="/plot/">
