--- a/income/piggy_bank/templates/debts.html
+++ b/income/piggy_bank/templates/debts.html
@@ -14,8 +14,8 @@
          <!--加入防攻击令牌-->
         {% csrf_token %}
         <br><a>债权人&nbsp;</a><input name="debtee" type="debtee">
-        <br><br><a>借&nbsp;&nbsp;&nbsp;款&nbsp;<input name="money" type="money">
-        <br><br><a>还&nbsp;&nbsp;&nbsp;款&nbsp;<input name="paid" type="paid">
+        <br><br><a>借&nbsp;&nbsp;&nbsp;款&nbsp;</a><input name="money" type="money">
+        <br><br><a>还&nbsp;&nbsp;&nbsp;款&nbsp;</a><input name="paid" type="paid">
         <br><a style="color:red">{{ error }}</a>
         <br><button style="width:215px;height:28px;" id="submit" type="submit">确认</button>
         </form>
