--- a/income/piggy_bank/templates/analysis_plot.html
+++ b/income/piggy_bank/templates/analysis_plot.html
@@ -42,8 +42,8 @@
 </nav>
 <div class="row" style="padding-top: 70px;">
     <div class="col-md-11">
-        <object style="border:0px" type="text/html" data="/static/plot.html" width=100% height=1000></object>
-        <!--type="text/html",兼容ie和safari-->
+        <object style="border:0px" type="text/html" data="/static/analysis.html" width=200% height=1000%></object>
+        </iframe>
     </div>
 </div>
 </body>
