--- a/income/piggy_bank/templates/debts_manage.html
+++ b/income/piggy_bank/templates/debts_manage.html
@@ -13,7 +13,10 @@
     <div class="container">
         <ul class="nav justify-content">
             <li>
-                <img src="/static/debt.svg">
+                <form method="post", action="/debts_plot/">
+                    {% csrf_token %}
+                    <input name="plot" type="image" src="/static/debt1.svg" class="btn" onmouseover="this.src='/static/debt2.svg'" onmouseout="this.src='/static/debt1.svg'"/>
+                </form>
             </li>
         </ul>
         <ul class="nav justify-content-center">
