--- a/income/piggy_bank/templates/debts_plot.html
+++ b/income/piggy_bank/templates/debts_plot.html
@@ -12,20 +12,7 @@
 <nav class="navbar navbar-expend-sm bg-dark navbar-dark fixed-top">
     <div class="container">
         <ul class="nav justify-content">
-            <form method="post" action="/select_plot/">
-            {% csrf_token %}
-            <input name="plot" type="image" src="/static/plot.svg" class="btn" onmouseover="this.src='/static/plot1.svg'" onmouseout="this.src='/static/plot.svg'"/>
-            <a>&nbsp;&nbsp;&nbsp;</a>
-            <select name="plots" class="btn">
-                {% for choice in choice_list %}
-                    {% if web_choice == choice %}
-                        <option value="{{ choice }}" selected>{{ choice }}</option>
-                    {% else %}
-                    <option value="{{ choice }}">{{ choice }}</option>
-                    {% endif %}
-                {% endfor %}
-            </select>
-             </form>
+            <img src="/static/debt1.svg"/>
         </ul>
         <ul class="nav justify-content-center">
             <li class="nav-link">
@@ -42,7 +29,7 @@
 </nav>
 <div class="row" style="padding-top: 70px;">
     <div class="col-md-11">
-        <object style="border:0px" type="text/html" data="/static/plot.html" width=100% height=1000></object>
+        <object style="border:0px" type="text/html" data="/static/debt.html" width=100% height=1000></object>
         <!--type="text/html",兼容ie和safari-->
     </div>
 </div>
